--- a/pom.xml
+++ b/pom.xml
@@ -54,25 +54,46 @@
        <enabled>false</enabled>
      </releases>
    </repository>
+
   </repositories>
 
   <dependencies>
    <dependency>
      <groupId>org.forgerock.commons</groupId>
      <artifactId>forgerock-util</artifactId>
-     <version>2.0.0-SNAPSHOT</version>
+     <version>3.0.2</version>
    </dependency>
 
    <dependency>
      <groupId>org.forgerock.commons</groupId>
      <artifactId>json-web-token</artifactId>
-     <version>3.0.0-SNAPSHOT</version>
+     <version>3.0.2</version>
    </dependency>
-  </dependencies>
+ <dependency>
+                <groupId>commons-codec</groupId>
+                <artifactId>commons-codec</artifactId>
+                <version>1.9</version>
+        </dependency>
+      <dependency>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-core</artifactId>
+          <version>2.4.2</version>
+      </dependency>
+      <dependency>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-annotations</artifactId>
+          <version>2.4.2</version>
+      </dependency>
+      <dependency>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-databind</artifactId>
+          <version>2.4.2</version>
+      </dependency>
 
+  </dependencies>
   <properties>
-  <maven.compiler.source>1.6</maven.compiler.source>
-  <maven.compiler.target>1.6</maven.compiler.target>
+  <maven.compiler.source>1.8</maven.compiler.source>
+  <maven.compiler.target>1.7</maven.compiler.target>
   <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
