--- a/pom.xml
+++ b/pom.xml
@@ -1,24 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ! The contents of this file are subject to the terms of the
-  ! Common Development and Distribution License, Version 1.0 only
-  ! (the "License").  You may not use this file except in compliance
-  ! with the License.
-  !
-  ! You can obtain a copy of the license at legal-notices/CDDLv1_0.txt
-  ! or http://forgerock.org/license/CDDLv1.0.html.
-  ! See the License for the specific language governing permissions
-  ! and limitations under the License.
-  !
-  ! When distributing Covered Code, include this CDDL HEADER in each
-  ! file and include the License file at legal-notices/CDDLv1_0.txt.
-  ! If applicable, add the following below this CDDL HEADER, with the
-  ! fields enclosed by brackets "[]" replaced with your own identifying
-  ! information:
-  !      Portions Copyright [yyyy] [name of copyright owner]
-  !
-  !     Copyright 2014 ForgeRock AS
-  !
+  Copyright 2014-2017 ForgeRock AS. All Rights Reserved
+ 
+  Use of this code requires a commercial software license with ForgeRock AS.
+  or with one of its affiliates. All use shall be exclusively subject
+  to such license between the licensee and ForgeRock AS.
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -30,7 +16,7 @@
   <parent>
    <groupId>org.forgerock</groupId>
    <artifactId>forgerock-parent</artifactId>
-   <version>1.2.5</version>
+   <version>2.0.19</version>
   </parent>
 
   <groupId>org.forgerock.openam</groupId>
@@ -38,23 +24,20 @@
   <version>1.0-SNAPSHOT</version>
 
   <repositories>
-   <repository>
-     <id>forgerock-staging-repository</id>
-     <name>ForgeRock Release Repository</name>
-     <url>http://maven.forgerock.org/repo/releases</url>
-     <snapshots>
-       <enabled>false</enabled>
-     </snapshots>
-   </repository>
-   <repository>
-     <id>forgerock-snapshots-repository</id>
-     <name>ForgeRock Snapshot Repository</name>
-     <url>http://maven.forgerock.org/repo/snapshots</url>
-     <releases>
-       <enabled>false</enabled>
-     </releases>
-   </repository>
-
+    <repository>
+      <id>forgerock-internal-releases</id>
+      <url>https://maven.forgerock.org/repo/internal-releases</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+    <repository>
+      <id>forgerock-internal-snapshots</id>
+      <url>https://maven.forgerock.org/repo/internal-snapshots</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+    </repository>
   </repositories>
 
   <dependencies>
@@ -69,32 +52,36 @@
      <artifactId>json-web-token</artifactId>
      <version>3.0.2</version>
    </dependency>
- <dependency>
-                <groupId>commons-codec</groupId>
-                <artifactId>commons-codec</artifactId>
-                <version>1.9</version>
-        </dependency>
-      <dependency>
-          <groupId>com.fasterxml.jackson.core</groupId>
-          <artifactId>jackson-core</artifactId>
-          <version>2.4.2</version>
-      </dependency>
-      <dependency>
-          <groupId>com.fasterxml.jackson.core</groupId>
-          <artifactId>jackson-annotations</artifactId>
-          <version>2.4.2</version>
-      </dependency>
-      <dependency>
-          <groupId>com.fasterxml.jackson.core</groupId>
-          <artifactId>jackson-databind</artifactId>
-          <version>2.4.2</version>
-      </dependency>
 
+   <dependency>
+    <groupId>commons-codec</groupId>
+    <artifactId>commons-codec</artifactId>
+    <version>1.9</version>
+   </dependency>
+
+   <dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-core</artifactId>
+    <version>2.4.2</version>
+   </dependency>
+
+   <dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-annotations</artifactId>
+    <version>2.4.2</version>
+   </dependency>
+
+   <dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>2.4.2</version>
+   </dependency>
   </dependencies>
+
   <properties>
-  <maven.compiler.source>1.8</maven.compiler.source>
-  <maven.compiler.target>1.7</maven.compiler.target>
-  <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+   <maven.compiler.source>1.8</maven.compiler.source>
+   <maven.compiler.target>1.8</maven.compiler.target>
+   <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
   <build>
